# rustime

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
migrations/: 20230518043329_install.sql
scss/: style.scss
src/: db.rs  main.rs  notify.rs  scheduler.rs  web.rs
templates/: 404.html.tera  base.html.tera  emergency.html.tera  index.html.tera
ts/: theme.ts
