[package]
edition = "2021"
name = "rustime"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.12.0"
dotenvy = "0.15.7"
pwhash = "1"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
rocket_contrib = {version = "0.4.10", default-features = false, features = ["serve"]}
rocket_dyn_templates = {version = "0.1.0-rc.3", features = ["tera"]}
sqlx = {version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "chrono"]}
tokio = {version = "1.28.1", features = ["full"]}
